force-app/main/default/objects/Person__c/fields/Total_Amount_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Tasks__c</fullName>
    <description>Total Amount of Tasks</description>
    <label>Total Amount of Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>