force-app/main/default/objects/Person__c/validationRules/Total_amount_of_Projects_for_1_Person_ca.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_amount_of_Projects_for_1_Person_ca</fullName>
    <active>true</active>
    <description>Total amount of Projects for 1 Person can not exceed 100</description>
    <errorConditionFormula>Total_Amount_of_Projects__c&gt;100</errorConditionFormula>
    <errorMessage>Error:Total amount of Projects for 1 Person can not exceed 100</errorMessage>
</ValidationRule>